--- a/templates/home.html
+++ b/templates/home.html
@@ -5,7 +5,12 @@
     <title>Home Page</title>
 </head>
 <body>
+    {% extends "template.html" %}
+    {% block content %}
+
 <h1> This is a Home Page! </h1>
 <p> Yay for home page! </p>
+
+    {% endblock %}
 </body>
 </html>
