--- a/templates/template.html
+++ b/templates/template.html
@@ -14,6 +14,7 @@
                 <li><a href="{{ url_for('home') }}">Home</a></li>
                 <li><a href="{{ url_for('about') }}">About</a></li>
                 <li><a href="{{ url_for('fancy') }}">Fancy</a></li>
+                <li><a href="{{ url_for('todo') }}">To Do List</a></li>
             </ul>
         </nav></strong>
     </div>
