--- a/templates/fancy.html
+++ b/templates/fancy.html
@@ -61,7 +61,7 @@
             </div>
         </div>
         <div class="flex-item image fit round">
-            <img src="images/pic01.jpg" alt="" />
+            <img src="" alt="" />
         </div>
         <div class="flex-item right">
             <div>
@@ -97,7 +97,7 @@
     <div class="inner flex flex-3">
         <div class="flex-item box">
             <div class="image fit">
-                <img src="images/pic02.jpg" alt="" />
+                <img src="" alt="" />
             </div>
             <div class="content">
                 <h3>Consequat</h3>
@@ -106,7 +106,7 @@
         </div>
         <div class="flex-item box">
             <div class="image fit">
-                <img src="images/pic03.jpg" alt="" />
+                <img src="" alt="" />
             </div>
             <div class="content">
                 <h3>Adipiscing</h3>
@@ -115,7 +115,7 @@
         </div>
         <div class="flex-item box">
             <div class="image fit">
-                <img src="images/pic04.jpg" alt="" />
+                <img src="" alt="" />
             </div>
             <div class="content">
                 <h3>Malesuada</h3>
@@ -141,11 +141,7 @@
 </footer>
 
 <!-- Scripts -->
-<script src="assets/js/jquery.min.js"></script>
-<script src="assets/js/jquery.scrolly.min.js"></script>
-<script src="assets/js/skel.min.js"></script>
-<script src="assets/js/util.js"></script>
-<script src="assets/js/main.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 
 </body>
 </html>
