--- a/templates/todo.html
+++ b/templates/todo.html
@@ -5,6 +5,7 @@
     <title>To Do List</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="shortcut icon" href="">
     <link rel="stylesheet" href="{{ url_for('static',     filename='css/todo.css') }}" />
 </head>
 
