--- a/templates/template.html
+++ b/templates/template.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
 <head>
     <meta charset="utf-8">
-    <link rel="shortcut icon" href="">
+    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
     <title>Flask Parent Template</title>
     <link rel="stylesheet" href="{{ url_for('static',     filename='css/template.css') }}">
 </head>
