--- a/templates/todo.html
+++ b/templates/todo.html
@@ -5,7 +5,7 @@
     <title>To Do List</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="shortcut icon" href="">
+    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
     <link rel="stylesheet" href="{{ url_for('static',     filename='css/todo.css') }}" />
 </head>
 
