--- a/templates/todo.html
+++ b/templates/todo.html
@@ -12,7 +12,7 @@
 <body>
     <div id="myDIV" class="header">
         <h2>My To Do List</h2>
-        <input type="text" id="myInput" placeholder="Title...">
+        <input type="text" id="myInput" placeholder="To do item...">
         <span onclick="newElement()" class="addBtn">Add</span>
     </div>
 
