--- a/templates/todo.html
+++ b/templates/todo.html
@@ -17,15 +17,13 @@
     </div>
 
     <ul id="myUL">
-        <li>Hit the gym</li>
-        <li class="checked">Pay bills</li>
-        <li>Meet George</li>
-        <li>Buy eggs</li>
-        <li>Read a book</li>
-        <li>Organize office</li>
+        {% for t in tasks %}
+            <li>{{t.task}}</li>
+        {% endfor %}
     </ul>
 </body>
 
 <script src="../static/js/todo.js" type="text/javascript"></script>
+<script src="jquery-3.4.1.min.js"></script>
 
 </html>
