--- a/templates/template.html
+++ b/templates/template.html
@@ -15,7 +15,7 @@
                 <li><a href="{{ url_for('home') }}">Home</a></li>
                 <li><a href="{{ url_for('about') }}">About</a></li>
                 <li><a href="{{ url_for('fancy') }}">Fancy</a></li>
-                <li><a href="{{ url_for('add_task') }}">To Do List</a></li>
+                <li><a href="{{ url_for('tasks') }}">To Do List</a></li>
             </ul>
         </nav></strong>
     </div>
