--- a/templates/todo.html
+++ b/templates/todo.html
@@ -9,7 +9,7 @@
     <script src="//ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/todo.css') }}" />
-    <script> window.onload = closeButton; </script>
+    <script> window.onload = loadElements; </script>
 </head>
 
 <body>
