--- a/templates/todo.html
+++ b/templates/todo.html
@@ -16,7 +16,7 @@
     <div id="myDIV" class="header">
         <h2>My To Do List</h2>
         <form method="POST" action="{{ url_for('add_task') }}">
-            <label for="myInput">Enter a new task!</label>
+<!--            <label for="myInput">Enter a new task!</label>-->
             <input name="newTask" type="text" id="myInput" placeholder="To do item...">
             <button type="submit" onclick="newElement()" class="addBtn">Add</button>
         </form>
