--- a/static/css/todo.css
+++ b/static/css/todo.css
@@ -67,6 +67,19 @@ ul li.checked::before {
     width: 7px;
 }
 
+/* Style the rename button */
+.rename {
+    position: absolute;
+    left: 1;
+    top: 0;
+    padding: 12px 16px 12px 16px;
+}
+
+.rename:hover {
+    background-color: #52B39C;
+    color: white;
+}
+
 /* Style the close button */
 .close {
     position: absolute;
