--- a/templates/todo.html
+++ b/templates/todo.html
@@ -5,10 +5,10 @@
     <title>To Do List</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <script src="../static/js/todo.js" type="text/javascript"></script>
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/todo.css') }}" />
+    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
+    <script language="JavaScript" type="text/javascript" src="static/js/jquery-3.2.1.min.js"></script>
+    <script src="../static/js/todo.js" type="text/javascript"></script>
     <script> window.onload = loadElements; </script>
 </head>
 
